correção de texto

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li>
                         <h5>2017 - 2018</h5>
                         <h4>Técnico em programação</h4>
-                        <h4>Instituto social nossa senhora de fátima</h4>
+                        <h4>Instituto social Nossa Senhora de Fátima</h4>
                     </li>
                     <li>
                         <h5>2019 - 2022</h5>
@@ -97,7 +97,7 @@
                 <h2 class="title2">Perfil</h2>
                 <p>
                     Me chamo Henrique Mendes de Brito, tenho 19 anos, e sou fascinado por programação. Estudo programação desde os meus 14 anos, com 15, me formei em um curso técnico
-                    voltado para a area de programação desktop utilizando a linguagem C# e o banco de dados relacional MySql. Atualmente, estou concluindo meu bacharel em sistemas de informação, com graduação 
+                    voltado para a área de programação desktop utilizando a linguagem C# e o banco de dados relacional MySql. Atualmente, estou concluindo meu bacharel em sistemas de informação, com graduação 
                     prevista para dezembro de 2022.
                 </p>                
             </div>
