Correção de texto

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></i></span>                        
-                        <span class="text">São Paulo, Sp, Brasil</span>                        
+                        <span class="text">São Paulo, SP, Brasil</span>                        
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>                        
@@ -52,7 +52,7 @@
                     <li>
                         <h5>2016 - 2018</h5>
                         <h4>Ensino médio</h4>
-                        <h4>Colégio 10 de maio</h4>
+                        <h4>Colégio 10 de Maio</h4>
                     </li>
                     <li>
                         <h5>2017 - 2018</h5>
