--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <li>
                         <h5>2017 - 2018</h5>
                         <h4>Técnico em programação</h4>
-                        <h4>Instituto social Nossa Senhora de Fátima</h4>
+                        <h4>Instituto Social Nossa Senhora de Fátima</h4>
                     </li>
                     <li>
                         <h5>2019 - 2022</h5>
