--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="text">
                         <h4>Auxiliar de programação</h4>
-                        <p>Sou um dos responsáveis pela parte de desenvolvimento da empresa. Durante os anos que estou na empresa, desenvolvi diversas aplicações desktop em C# para aplicações de visão computacional, automação industrial, estatísticas, dashboards em conjunto com banco de dados sql, entre outras atribuições que me foram impostas, tais como o desenvolvimento de modelos de machine Learning em python para a analise de imagens.</p>
+                        <p>Sou um dos responsáveis pela parte de desenvolvimento da empresa. Durante os anos que estou na empresa, desenvolvi diversas aplicações desktop em C# para aplicações de visão computacional, automação industrial, estatísticas, dashboards em conjunto com banco de dados sql, entre outras atribuições que me foram impostas, tais como o desenvolvimento de modelos de machine Learning em python para a ánalise de imagens.</p>
                     </div>
                 </div>             
             </div>
