--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>                        
-                        <span class="text">https://www.linkedin.com/in/henrique-mendes-a77581185/</span>
+                        <span class="text">www.linkedin.com/in/henrique-mendes-brito</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></i></span>                        
