--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class="contactInfo education">
-                <h3 class="title">Formação academica</h3>
+                <h3 class="title">Formação acadê    mica</h3>
                 <ul>
                     <li>
                         <h5>2016 - 2018</h5>
@@ -96,7 +96,7 @@
             <div class="about">
                 <h2 class="title2">Perfil</h2>
                 <p>
-                    Me chamo Henrique Mendes de Brito, tenho 19 anos, e sou fascinado por programação. Estudo programação desde os meus 14 anos, com 15, me formei em um curso técnico
+                    Me chamo Henrique Mendes de Brito, tenho 20 anos, e sou fascinado por programação. Estudo programação desde os meus 14 anos, com 15, me formei em um curso técnico
                     voltado para a área de programação desktop utilizando a linguagem C# e o banco de dados relacional MySql. Atualmente, estou concluindo meu bacharel em sistemas de informação, com graduação 
                     prevista para dezembro de 2022.
                 </p>                
@@ -110,7 +110,7 @@
                     </div>
                     <div class="text">
                         <h4>Auxiliar de programação</h4>
-                        <p>Sou um dos responsáveis pela parte de desenvolvimento da empresa. Durante os anos que estou na empresa, desenvolvi diversas aplicações desktop em C# para aplicações de visão computacional, automação industrial, estatísticas, dashboards em conjunto com banco de dados sql, entre outras atribuições que me foram impostas, tais como o desenvolvimento de modelos de machine Learning em python para a ánalise de imagens.</p>
+                        <p>Sou um dos responsáveis pela parte de desenvolvimento da empresa. Durante os anos que estou na empresa, desenvolvi diversas aplicações desktop em C# para aplicações de visão computacional, automação industrial, estatísticas, dashboards em conjunto com banco de dados sql, entre outras atribuições que me foram impostas, tais como o desenvolvimento de modelos de machine Learning em python para a análise de imagens.</p>
                     </div>
                 </div>             
             </div>
