--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                     Henrique Brito<br>
                     <span>Desenvolvedor</span>
                 </h2>
-            </div>   
+            </div>
             <div class="contactInfo">
-                <h3 class="title"> Informações para contato</h3>
+                <h3 class="title"> Contato</h3>
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>                        
@@ -33,36 +33,66 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>                        
-                        <span class="text">www.linkedin.com/in/henrique-mendes-brito</span>
+                        <span class="text">https://www.linkedin.com/in/henrique-mendes-a77581185/</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></i></span>                        
-                        <span class="text">São Paulo, SP, Brasil</span>                        
+                        <span class="text">São Paulo, Sp, Brasil</span>                        
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>                        
-                        <span class="text">https://github.com/HmbGow</span>                        
+                        <span class="text">https://github.com/HmbGow</span>
                     </li>
                 </ul>
             </div>
 
             <div class="contactInfo education">
-                <h3 class="title">Formação acadê    mica</h3>
+                <h3 class="title">Formação academica</h3>
                 <ul>
                     <li>
                         <h5>2016 - 2018</h5>
                         <h4>Ensino médio</h4>
-                        <h4>Colégio 10 de Maio</h4>
+                        <h4>Colégio 10 de maio</h4>
                     </li>
                     <li>
                         <h5>2017 - 2018</h5>
                         <h4>Técnico em programação</h4>
-                        <h4>Instituto Social Nossa Senhora de Fátima</h4>
+                        <h4>Instituto social nossa senhora de fátima</h4>
                     </li>
                     <li>
                         <h5>2019 - 2022</h5>
                         <h4>Bacharel em sistemas de informação</h4>
                         <h4>Universidade Anhembi Morumbi</h4>
+                    </li>
+                    <li>
+                        <h5>2023 - 2024</h5>
+                        <h4>Pós graduação em Arquitetura de sistemas .net</h4>
+                        <h4>FIAP</h4>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="contactInfo education">
+                <h3 class="title">Certificações</h3>
+                <ul>
+                    <li>
+                        <h5>Microsoft - Outubro de 2021</h5>
+                        <h4>MTA: Software Development Fundamentals </h4>
+                        <a href="https://www.credly.com/badges/e924b775-4c71-47e9-88ee-e0d07e9a307c?source=linked_in_profile">Clique aqui para visualizar</a>
+                    </li>
+                    <li>
+                        <h5>Cambridge Assessment English - Setembro de 2018</h5>
+                        <h4>Técnico em programação</h4>
+                        <h4>Instituto social nossa senhora de fátima</h4>
+                    </li>
+                    <li>
+                        <h5>2019 - 2022</h5>
+                        <h4>First Certificate in English</h4>
+                    </li>
+                    <li>
+                        <h5>2023 - 2024</h5>
+                        <h4>Pós graduação em Arquitetura de sistemas .net</h4>
+                        <h4>FIAP</h4>
                     </li>
                 </ul>
             </div>
@@ -96,23 +126,34 @@
             <div class="about">
                 <h2 class="title2">Perfil</h2>
                 <p>
-                    Me chamo Henrique Mendes de Brito, tenho 20 anos, e sou fascinado por programação. Estudo programação desde os meus 14 anos, com 15, me formei em um curso técnico
-                    voltado para a área de programação desktop utilizando a linguagem C# e o banco de dados relacional MySql. Atualmente, estou concluindo meu bacharel em sistemas de informação, com graduação 
-                    prevista para dezembro de 2022.
+                    Me chamo Henrique Mendes de Brito, tenho 21 anos, e sou fascinado por programação. Estudo programação desde os meus 14 anos, com 15, me formei em um curso técnico
+                    voltado para a area de programação desktop utilizando a linguagem C# e o banco de dados relacional MySql. Sou bacharel em sistemas de informação, e curso pós graduação em Arquitetura de sistemas .net.
                 </p>                
             </div>
             <div class="about">
                 <h2 class="title2">Experiências</h2>   
                 <div class="box">
                     <div class="year_company">
-                        <h5>2019 - Presente</h5>
+                        <h5>2019 - 2021</h5>
                         <h5>Gautama sistemas de visão</h5>
                     </div>
                     <div class="text">
-                        <h4>Auxiliar de programação</h4>
-                        <p>Sou um dos responsáveis pela parte de desenvolvimento da empresa. Durante os anos que estou na empresa, desenvolvi diversas aplicações desktop em C# para aplicações de visão computacional, automação industrial, estatísticas, dashboards em conjunto com banco de dados sql, entre outras atribuições que me foram impostas, tais como o desenvolvimento de modelos de machine Learning em python para a análise de imagens.</p>
+                        <h4>Programador</h4>
+                        <p>Sou um dos responsáveis pela parte de desenvolvimento da empresa. Durante os anos que estou na empresa, desenvolvi diversas aplicações desktop em C# para aplicações de visão computacional, automação industrial, estatísticas, dashboards em conjunto com banco de dados sql, entre outras atribuições que me foram impostas, tais como o desenvolvimento de modelos de machine Learning em python para a analise de imagens.</p>
                     </div>
-                </div>             
+                </div>    
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2021 - Presente</h5>
+                        <h5>Ponfac S/A</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Desenvolvedor II</h4>
+                        <p>Trabalho principalmente com aplicações desktop, utlizando .net na maior parte dos meus projetos, desenvolvendo aplicações em Wpf, Windows Forms, API RESTful , Windows Services, entre outros...</p>
+                        <p>Atuo principalmente junto ao time de Produtos, atuando como desenvolvedor pleno e auxiliando em algumas tarefas a nível de coordenação, garantindo um bom entendimento e delegação das atividades, além de ter um papel fundamental na definição da arquitetura e organização dos nossos sistemas.</p>
+                        <p>Atuo em constante auxilio aos meus colegas, garantindo um ambiente sadio e promovendo o crescimento da equipe como um todo </p>
+                    </div>
+                </div>     
             </div>
             <div class="about skills">
                 <h2 class="title2">Habilidades</h2>
