Correção de texto

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="text">
                         <h4>Desenvolvedor II</h4>
-                        <p>Trabalho principalmente com aplicações desktop, utlizando .net na maior parte dos meus projetos, desenvolvendo aplicações em Wpf, Windows Forms, API RESTful , Windows Services, entre outros...</p>
+                        <p>Trabalho principalmente com aplicações desktop, utilizando .net na maior parte dos meus projetos, desenvolvendo aplicações em Wpf, Windows Forms, API RESTful , Windows Services, entre outros...</p>
                         <p>Atuo principalmente junto ao time de Produtos, atuando como desenvolvedor pleno e auxiliando em algumas tarefas a nível de coordenação, garantindo um bom entendimento e delegação das atividades, além de ter um papel fundamental na definição da arquitetura e organização dos nossos sistemas.</p>
                         <p>Atuo em constante auxilio aos meus colegas, garantindo um ambiente sadio e promovendo o crescimento da equipe como um todo </p>
                     </div>
